QmakePM: Let some more built-in qmake variables get highlighted

Task-number: QTCREATORBUG-14389
Change-Id: Iacd6524bf8a7a970af6515193dd7ca4a0814e121
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>